<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <ImageView
            android:layout_width="215dp"
            android:layout_height="108dp" app:srcCompat="@drawable/logo"
            android:id="@+id/imageView"
            app:layout_constraintEnd_toEndOf="@+id/Introduction" android:layout_marginEnd="8dp"
            android:layout_marginTop="28dp" app:layout_constraintTop_toBottomOf="@+id/Introduction"
            app:layout_constraintStart_toStartOf="@+id/Introduction" app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/Intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Introduction"
            android:layout_marginTop="60dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textSize="30sp" android:fontFamily="sans-serif-condensed-medium"
            android:textStyle="bold" android:textAlignment="center"
            android:textColor="#07146B" app:layout_constraintHorizontal_bias="0.497"
    />
    <Button
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="GoTovacancies"
            android:id="@+id/Login"
            android:background="@color/buttonBackground"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            android:layout_marginTop="30dp" app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="@+id/Introduction"/>
    <Button
            android:text="@string/register"
            android:onClick="registerMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Register"
            app:layout_constraintTop_toBottomOf="@+id/Login"
            android:layout_marginTop="30dp" android:background="@color/buttonBackground"
            app:layout_constraintEnd_toEndOf="@+id/Login" app:layout_constraintStart_toStartOf="@+id/Login"/>
    <Button
            android:text="@string/faq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="GoToFAQ"
            android:id="@+id/FAQ"
            android:layout_marginTop="30dp" app:layout_constraintTop_toBottomOf="@+id/Register"
            android:background="@color/buttonBackground"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/Login"/>
</androidx.constraintlayout.widget.ConstraintLayout>