<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/loginbackground"
        tools:context=".Registercompany">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
                    android:text="@string/fill_in"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/textView10" app:layout_constraintStart_toStartOf="@+id/Company"
                    app:layout_constraintEnd_toEndOf="@+id/Company" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent" android:textStyle="bold" android:textSize="32sp"
                    android:textColor="@color/LogoColor"/>
            <EditText
                    android:layout_width="200sp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:inputType="textPersonName"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="10dp"
                    android:id="@+id/Company"
                    android:hint="@string/company_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.502"
                    app:layout_constraintTop_toBottomOf="@+id/textView10"
                    />
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/text_input_password"
                    android:layout_marginTop="5dp"
                    app:layout_constraintTop_toBottomOf="@+id/Company"
                    app:layout_constraintStart_toStartOf="@+id/Company" app:layout_constraintEnd_toEndOf="@+id/Company"
                    android:hint="@string/password"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/BTW"
                    app:layout_constraintEnd_toEndOf="@+id/text_input_password"
                    app:layout_constraintStart_toStartOf="@+id/text_input_password" android:layout_marginTop="5dp"
                    app:layout_constraintTop_toBottomOf="@+id/text_input_password" android:hint="@string/btw_number"/>
            <EditText
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:hint="@string/e_mail_address"
                    app:layout_constraintEnd_toEndOf="@+id/BTW"
                    android:layout_marginTop="5dp" app:layout_constraintTop_toBottomOf="@+id/BTW"
                    app:layout_constraintStart_toStartOf="@+id/BTW"/>

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:inputType="phone"
                    android:ems="10"
                    android:id="@+id/phone"
                    app:layout_constraintStart_toStartOf="@+id/email" app:layout_constraintEnd_toEndOf="@+id/email"
                    android:layout_marginTop="5dp" app:layout_constraintTop_toBottomOf="@+id/email"
                    app:layout_constraintHorizontal_bias="0.0" android:hint="@string/phone_number"/>
            <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBox"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="52dp"
                    app:layout_constraintTop_toTopOf="@+id/TandC" app:layout_constraintBottom_toBottomOf="@+id/TandC"
                    android:layout_marginStart="40dp" app:layout_constraintStart_toEndOf="@+id/TandC"/>

            <Button
                    android:text="@string/submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="registerBack"
                    android:background="@drawable/buttonbackground"
                    android:id="@+id/Submit_register_company"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:layout_editor_absoluteX="162dp"
                    app:layout_constraintTop_toBottomOf="@+id/TandC" app:layout_constraintVertical_bias="0.0"
                    android:layout_marginTop="40dp"/>
            <Spinner
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:id="@+id/spinner"
                    android:autofillHints="Select your City"
                    app:layout_constraintStart_toStartOf="@+id/phone"
                    app:layout_constraintTop_toBottomOf="@+id/phone"
                    app:layout_constraintEnd_toEndOf="@+id/phone"/>
            <ImageView
                    android:layout_width="200dp"
                    android:layout_height="60dp"
                    app:srcCompat="@drawable/logowithtext"
                    android:id="@+id/logo_register_company" android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/Submit_register_company" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="@+id/TandC"
                    app:layout_constraintEnd_toEndOf="@+id/TandC" android:layout_marginEnd="8dp"/>
            <TextView
                    android:text="Check the box if you agree with the Terms \u0026 Conditions and the Privacy Policy"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/TandC" app:layout_constraintStart_toStartOf="@+id/spinner"
                    app:layout_constraintTop_toBottomOf="@+id/spinner" app:layout_constraintEnd_toEndOf="@+id/spinner"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
