<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/loginbackground"
        tools:context=".FAQ">

    <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/Scroll" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="1.0">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
                    android:text="@string/intro_faq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/IntroFAQ"
                    android:layout_gravity="center_horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toTopOf="@+id/Scroll"
                    android:textSize="32sp"
                    android:textColor="#E51E37"
                    android:textStyle="bold"/>
            <ImageView
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    app:srcCompat="@drawable/logowithouttext"
                    android:id="@+id/imageView3"
                    android:layout_gravity="center_horizontal"
                    app:layout_constraintEnd_toEndOf="@+id/IntroFAQ"
                    app:layout_constraintStart_toStartOf="@+id/IntroFAQ"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/IntroFAQ"/>
            <TextView
                    android:text="@string/welcome_to_faq"
                    android:layout_width="350sp"
                    android:layout_height="wrap_content"
                    android:id="@+id/FAQ_text"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textColor="@android:color/black"
                    app:layout_constraintTop_toBottomOf="@+id/imageView3"
                    app:layout_constraintStart_toStartOf="@+id/IntroFAQ"/>
            <TextView
                    android:text="@string/Question_intro_faq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/FAQ_Question_mail"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintStart_toStartOf="@+id/FAQ_text"
                    app:layout_constraintTop_toBottomOf="@+id/FAQ_text"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"/>


            <TextView
                    android:text="@string/please_contact_vernaljobs_outlook_be"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:id="@+id/textView4"
                    app:layout_constraintTop_toBottomOf="@+id/FAQ_Question_mail"
                    app:layout_constraintStart_toStartOf="@+id/FAQ_Question_mail"
                    android:layout_marginTop="10dp"/>
            <Button
                    android:text="@string/go_back_faq"
                    android:layout_width="wrap_content"
                    android:onClick='BackToMain'
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
                    android:id="@+id/FAQ_button"
                    android:background="@drawable/hoverbutton"
                    android:layout_gravity="end"
            android:layout_marginBottom="20dp"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>