<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/loginbackground"
        tools:context=".Register">

    <ImageView
            android:layout_width="185dp"
            android:layout_height="147dp" app:srcCompat="@drawable/logowithtext"
            android:id="@+id/imageView2"
            android:layout_gravity="center_horizontal"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="50dp" app:layout_constraintTop_toBottomOf="@+id/Employees"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.39"/>
    <TextView
            android:text="@string/register_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/What_are_you"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textSize="42sp" android:layout_marginTop="64dp" android:textStyle="bold"
            android:textColor="#E51E37"/>
    <Button
            android:text="@string/workers"
            android:layout_width="200dp"
            android:background="@drawable/hoverbutton"
            android:layout_height="wrap_content"
            android:id="@+id/Work"
            android:layout_marginTop="100dp"
            app:layout_constraintTop_toBottomOf="@+id/What_are_you"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="@+id/What_are_you"
            app:layout_constraintEnd_toEndOf="@+id/What_are_you"/>
    <Button
            android:text="@string/company"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:onClick="registerCompany"
            android:id="@+id/Employees"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/Work"
            android:background="@drawable/hoverbutton"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="@+id/Work" app:layout_constraintEnd_toEndOf="@+id/Work"/>
</androidx.constraintlayout.widget.ConstraintLayout>